@@ -1260,6 +1260,9 @@ do_curl_setopt(CurlObject *self, PyObject *args)
     case CURLOPT_SERVICE_NAME:
     case CURLOPT_PROXY_SERVICE_NAME:
 #endif
+#if LIBCURL_VERSION_NUM >= 0x071500 /* check for 7.21.0 or greater */
+    case CURLOPT_WILDCARDMATCH:
+#endif
 /* FIXME: check if more of these options allow binary data */
             str = PyText_AsString_NoNUL(obj, &encoded_obj);
             if (str == NULL)
